--- a/theme/decks.html
+++ b/theme/decks.html
@@ -134,21 +134,21 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <p class="paragraph dark medium center">{{ texts.-3675d188 }}</p>
       <div class="w-layout-grid grid-3-columnas">
         <div class="div-start-vertical">
-          <a href="{{ links.23 }}" class="lightbox-link-deck w-inline-block w-lightbox">{%- image images.-63ceb2dd.url, images.-63ceb2dd.alt, '[]', 'loading="lazy"' -%}
+          <a href="{{ links.23 }}" class="lightbox-link-deck w-inline-block w-lightbox">{%- image images.-63ceb2dd.url, images.-63ceb2dd.alt, '[{"max":400,"size":"100vw"},{"max":10000,"size":"400px"}]', 'loading="lazy"' -%}
             <script type="application/json" class="w-json">{"items":[{"_id":"example_img","origFileName":"deck-teka.jpg","fileName":"deck-teka.jpg","fileSize":208495,"height":960,"url":"/assets/images/deck-teka.jpg","width":1280,"type":"image"}],"group":""}</script>
           </a>
           <h4 class="center">{{ texts.-5e2739cd }}</h4>
           <p class="paragraph center">{{ texts.-21d501a }}</p>
         </div>
         <div class="div-start-vertical">
-          <a href="{{ links.23 }}" class="lightbox-link-deck w-inline-block w-lightbox">{%- image images.-5b3e035b.url, images.-5b3e035b.alt, '[]', 'loading="lazy"' -%}
+          <a href="{{ links.23 }}" class="lightbox-link-deck w-inline-block w-lightbox">{%- image images.-5b3e035b.url, images.-5b3e035b.alt, '[{"max":400,"size":"100vw"},{"max":10000,"size":"400px"}]', 'loading="lazy"' -%}
             <script type="application/json" class="w-json">{"items":[{"_id":"example_img","origFileName":"deck-cumaru.jpg","fileName":"deck-cumaru.jpg","fileSize":174070,"height":960,"url":"/assets/images/deck-cumaru.jpg","width":1280,"type":"image"}],"group":""}</script>
           </a>
           <h4 class="center">{{ texts.47eabb58 }}</h4>
           <p class="paragraph center">{{ texts.-324dea78 }}</p>
         </div>
         <div class="div-start-vertical">
-          <a href="{{ links.23 }}" class="lightbox-link-deck w-inline-block w-lightbox">{%- image images.-535eb38.url, images.-535eb38.alt, '[]', 'loading="lazy"' -%}
+          <a href="{{ links.23 }}" class="lightbox-link-deck w-inline-block w-lightbox">{%- image images.-535eb38.url, images.-535eb38.alt, '[{"max":400,"size":"100vw"},{"max":10000,"size":"400px"}]', 'loading="lazy"' -%}
             <script type="application/json" class="w-json">{"items":[{"_id":"example_img","origFileName":"deck-ipe.jpg","fileName":"deck-ipe.jpg","fileSize":186434,"height":960,"url":"/assets/images/deck-ipe.jpg","width":1280,"type":"image"}],"group":""}</script>
           </a>
           <h4 class="center">{{ texts.10cad864 }}</h4>
@@ -161,9 +161,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="div-container">
       <h2 class="heading-2 center">{{ texts.4a8dfa7e }}</h2>
       <p class="paragraph dark big center">{{ texts.-28d810cb }}</p>
-      <p class="paragraph dark medium center">{{ texts.13fa1e1e }}</p>{%- image images.3bcfc85e.url, images.3bcfc85e.alt, '[{"max":10000,"size":"100vw"}]', 'class="deck-bambu-img"' -%}
+      <p class="paragraph dark medium center">{{ texts.13fa1e1e }}</p>{%- image images.3bcfc85e.url, images.3bcfc85e.alt, '[{"max":991,"size":"90vw"},{"max":10000,"size":"762px"}]', 'class="deck-bambu-img"' -%}
       <p class="paragraph dark medium center">{{ texts.6f491240 }}</p>
-      <p class="paragraph dark medium center">{{ texts.-4b659361 }}</p>{%- image images.-427b5ae9.url, images.-427b5ae9.alt, '[{"max":10000,"size":"100vw"}]', 'class="deck-bambu-img"' -%}
+      <p class="paragraph dark medium center">{{ texts.-4b659361 }}</p>{%- image images.-427b5ae9.url, images.-427b5ae9.alt, '[{"max":991,"size":"90vw"},{"max":10000,"size":"762px"}]', 'class="deck-bambu-img"' -%}
     </div>
   </div>
   <div id="decksintetico" class="section-decks-sinteticos wf-section">
@@ -174,53 +174,53 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <h3 class="center">{{ texts.7b300b7e }}</h3>
       <p class="paragraph dark medium center">{{ texts.-3f3c4eb4 }}</p>
       <div class="contenedor-lightbox">
-        <a href="{{ links.23 }}" class="lightbox-link w-inline-block w-lightbox">{%- image images.5c6697b3.url, images.5c6697b3.alt, '[{"max":10000,"size":"100vw"}]', 'loading="lazy" class="lightbox-image"' -%}
+        <a href="{{ links.23 }}" class="lightbox-link w-inline-block w-lightbox">{%- image images.5c6697b3.url, images.5c6697b3.alt, '[{"max":991,"size":"20vw"},{"max":10000,"size":"192px"}]', 'loading="lazy" class="lightbox-image"' -%}
           <script type="application/json" class="w-json">{"items":[{"_id":"61965e6f714e9164a56a3c68","origFileName":"deck-sintetico-UH01.jpg","fileName":"deck-sintetico-UH01.jpg","fileSize":11674,"height":482,"url":"/assets/images/deck-sintetico-uh01.jpg","width":643,"caption":"Deck sintético tipo eco-deck","type":"image"}],"group":"eco-deck"}</script>
         </a>
-        <a href="{{ links.23 }}" class="lightbox-link w-inline-block w-lightbox">{%- image images.5c74af34.url, images.5c74af34.alt, '[{"max":10000,"size":"100vw"}]', 'loading="lazy" class="lightbox-image"' -%}
+        <a href="{{ links.23 }}" class="lightbox-link w-inline-block w-lightbox">{%- image images.5c74af34.url, images.5c74af34.alt, '[{"max":991,"size":"20vw"},{"max":10000,"size":"192px"}]', 'loading="lazy" class="lightbox-image"' -%}
           <script type="application/json" class="w-json">{"items":[{"_id":"61965e7fa007630cce1c3843","origFileName":"deck-sintetico-UH02.jpg","fileName":"deck-sintetico-UH02.jpg","fileSize":9946,"height":482,"url":"/assets/images/deck-sintetico-uh02.jpg","width":643,"caption":"Deck sintético tipo eco-deck","type":"image"}],"group":"eco-deck"}</script>
         </a>
-        <a href="{{ links.23 }}" class="lightbox-link w-inline-block w-lightbox">{%- image images.5c9ef5b7.url, images.5c9ef5b7.alt, '[{"max":10000,"size":"100vw"}]', 'loading="lazy" class="lightbox-image"' -%}
+        <a href="{{ links.23 }}" class="lightbox-link w-inline-block w-lightbox">{%- image images.5c9ef5b7.url, images.5c9ef5b7.alt, '[{"max":991,"size":"20vw"},{"max":10000,"size":"192px"}]', 'loading="lazy" class="lightbox-image"' -%}
           <script type="application/json" class="w-json">{"items":[{"_id":"61965e8d4c377579d0be9d42","origFileName":"deck-sintetico-UH05.jpg","fileName":"deck-sintetico-UH05.jpg","fileSize":12094,"height":482,"url":"/assets/images/deck-sintetico-uh05.jpg","width":643,"caption":"Deck sintético tipo eco-deck","type":"image"}],"group":"eco-deck"}</script>
         </a>
       </div>
       <div class="contenedor-lightbox">
-        <a href="{{ links.23 }}" class="lightbox-link w-inline-block w-lightbox">{%- image images.-7be68237.url, images.-7be68237.alt, '[{"max":10000,"size":"100vw"}]', 'loading="lazy" class="lightbox-image"' -%}
+        <a href="{{ links.23 }}" class="lightbox-link w-inline-block w-lightbox">{%- image images.-7be68237.url, images.-7be68237.alt, '[{"max":991,"size":"20vw"},{"max":10000,"size":"192px"}]', 'loading="lazy" class="lightbox-image"' -%}
           <script type="application/json" class="w-json">{"items":[{"_id":"619660c2ad366bc0bd5756cd","origFileName":"deck-sintetico-01.jpeg","fileName":"deck-sintetico-01.jpeg","fileSize":130718,"height":905,"url":"/assets/images/deck-sintetico-01.jpeg","width":1200,"caption":"Deck sintético tipo eco-deck","type":"image"}],"group":"eco-deck"}</script>
         </a>
-        <a href="{{ links.23 }}" class="lightbox-link w-inline-block w-lightbox">{%- image images.-7a31a998.url, images.-7a31a998.alt, '[{"max":10000,"size":"100vw"}]', 'loading="lazy" class="lightbox-image"' -%}
+        <a href="{{ links.23 }}" class="lightbox-link w-inline-block w-lightbox">{%- image images.-7a31a998.url, images.-7a31a998.alt, '[{"max":991,"size":"20vw"},{"max":10000,"size":"192px"}]', 'loading="lazy" class="lightbox-image"' -%}
           <script type="application/json" class="w-json">{"items":[{"_id":"619660d950eec5390b7f36fa","origFileName":"deck-sintetico-02.jpeg","fileName":"deck-sintetico-02.jpeg","fileSize":118429,"height":905,"url":"/assets/images/deck-sintetico-02.jpeg","width":1200,"caption":"Deck sintético tipo eco-deck","type":"image"}],"group":"eco-deck"}</script>
         </a>
-        <a href="{{ links.23 }}" class="lightbox-link w-inline-block w-lightbox">{%- image images.-787cd0f9.url, images.-787cd0f9.alt, '[{"max":10000,"size":"100vw"}]', 'loading="lazy" class="lightbox-image"' -%}
+        <a href="{{ links.23 }}" class="lightbox-link w-inline-block w-lightbox">{%- image images.-787cd0f9.url, images.-787cd0f9.alt, '[{"max":991,"size":"20vw"},{"max":10000,"size":"192px"}]', 'loading="lazy" class="lightbox-image"' -%}
           <script type="application/json" class="w-json">{"items":[{"_id":"619660e9e998684d04f7b7a3","origFileName":"deck-sintetico-03.jpeg","fileName":"deck-sintetico-03.jpeg","fileSize":85927,"height":905,"url":"/assets/images/deck-sintetico-03.jpeg","width":1200,"caption":"Deck sintético tipo eco-deck","type":"image"}],"group":"eco-deck"}</script>
         </a>
-        <a href="{{ links.23 }}" class="lightbox-link w-inline-block w-lightbox">{%- image images.-76c7f85a.url, images.-76c7f85a.alt, '[{"max":10000,"size":"100vw"}]', 'loading="lazy" class="lightbox-image"' -%}
+        <a href="{{ links.23 }}" class="lightbox-link w-inline-block w-lightbox">{%- image images.-76c7f85a.url, images.-76c7f85a.alt, '[{"max":991,"size":"20vw"},{"max":10000,"size":"192px"}]', 'loading="lazy" class="lightbox-image"' -%}
           <script type="application/json" class="w-json">{"items":[{"_id":"619660f74ecb4b25c4c74e1c","origFileName":"deck-sintetico-04.jpeg","fileName":"deck-sintetico-04.jpeg","fileSize":144639,"height":905,"url":"/assets/images/deck-sintetico-04.jpeg","width":1200,"caption":"Deck sintético tipo eco-deck","type":"image"}],"group":"eco-deck"}</script>
         </a>
-        <a href="{{ links.23 }}" class="lightbox-link w-inline-block w-lightbox">{%- image images.-75131fbb.url, images.-75131fbb.alt, '[{"max":10000,"size":"100vw"}]', 'loading="lazy" class="lightbox-image"' -%}
+        <a href="{{ links.23 }}" class="lightbox-link w-inline-block w-lightbox">{%- image images.-75131fbb.url, images.-75131fbb.alt, '[{"max":991,"size":"20vw"},{"max":10000,"size":"192px"}]', 'loading="lazy" class="lightbox-image"' -%}
           <script type="application/json" class="w-json">{"items":[{"_id":"61966102e6479d60a69be0f3","origFileName":"deck-sintetico-05.jpeg","fileName":"deck-sintetico-05.jpeg","fileSize":77295,"height":800,"url":"/assets/images/deck-sintetico-05.jpeg","width":1200,"caption":"Deck sintético tipo eco-deck","type":"image"}],"group":"eco-deck"}</script>
         </a>
-        <a href="{{ links.23 }}" class="lightbox-link w-inline-block w-lightbox">{%- image images.-735e471c.url, images.-735e471c.alt, '[{"max":10000,"size":"100vw"}]', 'loading="lazy" class="lightbox-image"' -%}
+        <a href="{{ links.23 }}" class="lightbox-link w-inline-block w-lightbox">{%- image images.-735e471c.url, images.-735e471c.alt, '[{"max":991,"size":"20vw"},{"max":10000,"size":"192px"}]', 'loading="lazy" class="lightbox-image"' -%}
           <script type="application/json" class="w-json">{"items":[{"_id":"61966110ad366be10f575897","origFileName":"deck-sintetico-06.jpeg","fileName":"deck-sintetico-06.jpeg","fileSize":83907,"height":800,"url":"/assets/images/deck-sintetico-06.jpeg","width":1200,"caption":"Deck sintético tipo eco-deck","type":"image"}],"group":"eco-deck"}</script>
         </a>
-        <a href="{{ links.23 }}" class="lightbox-link w-inline-block w-lightbox">{%- image images.-71a96e7d.url, images.-71a96e7d.alt, '[{"max":10000,"size":"100vw"}]', 'loading="lazy" class="lightbox-image"' -%}
+        <a href="{{ links.23 }}" class="lightbox-link w-inline-block w-lightbox">{%- image images.-71a96e7d.url, images.-71a96e7d.alt, '[{"max":991,"size":"20vw"},{"max":10000,"size":"192px"}]', 'loading="lazy" class="lightbox-image"' -%}
           <script type="application/json" class="w-json">{"items":[{"_id":"6196611c8b596d475b9a308c","origFileName":"deck-sintetico-07.jpeg","fileName":"deck-sintetico-07.jpeg","fileSize":108383,"height":800,"url":"/assets/images/deck-sintetico-07.jpeg","width":1200,"caption":"Deck sintético tipo eco-deck","type":"image"}],"group":"eco-deck"}</script>
         </a>
       </div>
       <div class="contenedor-lightbox">
-        <a href="{{ links.23 }}" class="lightbox-link w-inline-block w-lightbox">{%- image images.-4b84ecd2.url, images.-4b84ecd2.alt, '[{"max":10000,"size":"100vw"}]', 'loading="lazy" class="lightbox-image"' -%}
+        <a href="{{ links.23 }}" class="lightbox-link w-inline-block w-lightbox">{%- image images.-4b84ecd2.url, images.-4b84ecd2.alt, '[{"max":991,"size":"20vw"},{"max":10000,"size":"192px"}]', 'loading="lazy" class="lightbox-image"' -%}
           <script type="application/json" class="w-json">{"items":[{"_id":"6196630f0ffe977af9bad04b","origFileName":"deck-sintetico-hard-1.jpg","fileName":"deck-sintetico-hard-1.jpg","fileSize":73099,"height":409,"url":"/assets/images/deck-sintetico-hard-1.jpg","width":410,"caption":"Deck sintético tipo eco-deck","type":"image"}],"group":"eco-deck"}</script>
         </a>
-        <a href="{{ links.23 }}" class="lightbox-link w-inline-block w-lightbox">{%- image images.-4b76d551.url, images.-4b76d551.alt, '[{"max":10000,"size":"100vw"}]', 'loading="lazy" class="lightbox-image"' -%}
+        <a href="{{ links.23 }}" class="lightbox-link w-inline-block w-lightbox">{%- image images.-4b76d551.url, images.-4b76d551.alt, '[{"max":991,"size":"20vw"},{"max":10000,"size":"192px"}]', 'loading="lazy" class="lightbox-image"' -%}
           <script type="application/json" class="w-json">{"items":[{"_id":"61966328996141023a6c8954","origFileName":"deck-sintetico-hard-2.jpg","fileName":"deck-sintetico-hard-2.jpg","fileSize":77942,"height":411,"url":"/assets/images/deck-sintetico-hard-2.jpg","width":410,"caption":"Deck sintético tipo eco-deck","type":"image"}],"group":"eco-deck"}</script>
         </a>
-        <a href="{{ links.23 }}" class="lightbox-link w-inline-block w-lightbox">{%- image images.-4b68bdd0.url, images.-4b68bdd0.alt, '[{"max":10000,"size":"100vw"}]', 'loading="lazy" class="lightbox-image"' -%}
+        <a href="{{ links.23 }}" class="lightbox-link w-inline-block w-lightbox">{%- image images.-4b68bdd0.url, images.-4b68bdd0.alt, '[{"max":991,"size":"20vw"},{"max":10000,"size":"192px"}]', 'loading="lazy" class="lightbox-image"' -%}
           <script type="application/json" class="w-json">{"items":[{"_id":"619663363c530385e1b20e73","origFileName":"deck-sintetico-hard-3.jpg","fileName":"deck-sintetico-hard-3.jpg","fileSize":80941,"height":415,"url":"/assets/images/deck-sintetico-hard-3.jpg","width":414,"type":"image"}],"group":"eco-deck"}</script>
         </a>
       </div>
       <h2 class="heading-2 center">{{ texts.325cb317 }}</h2>
       <p class="paragraph dark medium center">{{ texts.-310afdd3 }}</p>
-      <a href="{{ links.23 }}" class="lightbox-galeria w-inline-block w-lightbox">{%- image images.-4e250faf.url, images.-4e250faf.alt, '[]', 'loading="lazy"' -%}
+      <a href="{{ links.23 }}" class="lightbox-galeria w-inline-block w-lightbox">{%- image images.-4e250faf.url, images.-4e250faf.alt, '[{"max":960,"size":"100vw"},{"max":10000,"size":"960px"}]', 'loading="lazy"' -%}
         <script type="application/json" class="w-json">{"items":[{"_id":"example_img","origFileName":"revestimiento-galeria-5.jpg","fileName":"revestimiento-galeria-5.jpg","fileSize":135996,"height":803,"url":"/assets/images/revestimiento-galeria-5.jpg","width":1440,"type":"image"},{"_id":"example_img","origFileName":"revestimiento-galeria-4.jpg","fileName":"revestimiento-galeria-4.jpg","fileSize":88648,"height":804,"url":"/assets/images/revestimiento-galeria-4.jpg","width":1440,"type":"image"},{"_id":"example_img","origFileName":"revestimiento-galeria-3.jpg","fileName":"revestimiento-galeria-3.jpg","fileSize":122060,"height":882,"url":"/assets/images/revestimiento-galeria-3.jpg","width":918,"type":"image"},{"_id":"example_img","origFileName":"revestimiento-galeria-2.jpg","fileName":"revestimiento-galeria-2.jpg","fileSize":91759,"height":872,"url":"/assets/images/revestimiento-galeria-2.jpg","width":753,"type":"image"},{"_id":"example_img","origFileName":"revestimiento-galeria-1.jpg","fileName":"revestimiento-galeria-1.jpg","fileSize":79865,"height":869,"url":"/assets/images/revestimiento-galeria-1.jpg","width":963,"type":"image"}],"group":""}</script>
       </a>
       <h3 class="center">{{ texts.-4064ce53 }}</h3>
@@ -231,7 +231,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="div-container">
       <h2 class="center">{{ texts.416fdc3a }}</h2>
       <p class="paragraph dark big center">{{ texts.-1e2b1b71 }}</p>
-      <a href="{{ links.23 }}" class="lightbox-video w-inline-block w-lightbox">{%- image images.13051060.url, images.13051060.alt, '[{"max":10000,"size":"100vw"}]', 'loading="lazy"' -%}
+      <a href="{{ links.23 }}" class="lightbox-video w-inline-block w-lightbox">{%- image images.13051060.url, images.13051060.alt, '[{"max":474,"size":"100vw"},{"max":10000,"size":"474px"}]', 'loading="lazy"' -%}
         <script type="application/json" class="w-json">{"items":[{"url":"https://youtube.com/watch?v=sIvXXJEa4TA&autoplay=1?rel=0&showinfo=0","originalUrl":"https://youtube.com/watch?v=sIvXXJEa4TA&autoplay=1?rel=0&showinfo=0","width":940,"height":528,"thumbnailUrl":"https://i.ytimg.com/vi/sIvXXJEa4TA/hqdefault.jpg","html":"<iframe class=\"embedly-embed\" src=\"//cdn.embedly.com/widgets/media.html?src=https%3A%2F%2Fwww.youtube.com%2Fembed%2FsIvXXJEa4TA%3Ffeature%3Doembed%26autoplay%3D1%26showinfo%3D0&display_name=YouTube&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DsIvXXJEa4TA&image=https%3A%2F%2Fi.ytimg.com%2Fvi%2FsIvXXJEa4TA%2Fhqdefault.jpg&args=rel%3D0%7Cautoplay%3D1&key=96f1f04c5f4143bcb0f2e68c87d65feb&autoplay=1&type=text%2Fhtml&schema=youtube\" width=\"940\" height=\"528\" scrolling=\"no\" title=\"YouTube embed\" frameborder=\"0\" allow=\"autoplay; fullscreen\" allowfullscreen=\"true\"></iframe>","type":"video"}],"group":""}</script>
       </a>
       <a href="{{ links.16bdc17e }}" class="boton w-button">{{ texts.-7c5ffd7b }}</a>
