--- a/theme/pisosdemadera.html
+++ b/theme/pisosdemadera.html
@@ -85,25 +85,47 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <div class="section-categorias-catalogo wf-section">
     <div>
       <div class="container-2 w-container">
-        <h1 class="heading-2 center">{{ texts.-2f1d9aab }}</h1>
-        <p class="paragraph dark big center">{{ texts.6531414e }}</p>
+        <h1 class="heading-2 center">{{ texts.-6f5be135 }}</h1>
+        <p class="paragraph dark big center">{{ texts.3d64bebf }}</p>
       </div>
     </div>
-    {%- assign collection = collections.categoria | filter: "f_deck,ne,true", "ALL", page.inputPath -%}<div class="w-dyn-list">
-      {%- unless collection.length == 0 -%}<div role="list" class="contenedor-catalogo w-dyn-items">
-        {%- for item in collection -%}<div role="listitem" class="contenedor-categoria-catalogo w-dyn-item">
-          <a href="{{ item.url }}" class="link-block-5link-block-5 w-inline-block">
-            <div class="imagen-boton-redondo-2" style="background-image: url('{{item.data.f_imagen.url}}');"></div>
+    <div class="div-horizontal-tarjetas">
+      <div class="tarjeta-imagen-cuadrada">
+        <a href="{{ links.23 }}" class="link-block-rectangular w-inline-block">
+          <div class="imagen-boton-rectangular"></div>
+          <div class="descripcion-link">{{ texts.1d7e72ad }}</div>
+        </a>
+        <div class="div-center-vertical">
+          <a href="{{ links.23 }}" class="link-block-tarjeta w-inline-block">
+            <h2 class="h2-small">{{ texts.-1ca88bf4 }}</h2>
           </a>
-          <h2 class="h2-small">{{ item.data.title }}</h2>
-          <p class="paragraph dark small center">{{ item.data.f_descripcion }}</p>
-          <a href="{{ item.url }}" class="boton hide w-button">{{ texts.-72aeb621 }}</a>
-          <a href="{{ item.url }}" class="boton w-button">{{ texts.-50fd480d }}</a>
-        </div>{%- endfor -%}
-      </div>{%- endunless -%}
-      {%- if collection.length == 0 -%}<div class="w-dyn-empty">
-        <div>{{ texts.3d503d2b }}</div>
-      </div>{%- endif -%}
+          <a href="{{ links.55e45e1b }}" class="boton w-button">{{ texts.1b4c8cf8 }}</a>
+        </div>
+      </div>
+      <div class="tarjeta-imagen-cuadrada">
+        <a href="{{ links.23 }}" class="link-block-rectangular w-inline-block">
+          <div class="imagen-boton-rectangular bambu"></div>
+          <div class="descripcion-link">{{ texts.4269339d }}</div>
+        </a>
+        <div class="div-center-vertical">
+          <a href="{{ links.23 }}" class="link-block-tarjeta w-inline-block">
+            <h2 class="h2-small">{{ texts.48cb0a5e }}</h2>
+          </a>
+          <a href="{{ links.55e45e1b }}" class="boton w-button">{{ texts.1b4c8cf8 }}</a>
+        </div>
+      </div>
+      <div class="tarjeta-imagen-cuadrada">
+        <a href="{{ links.23 }}" class="link-block-rectangular w-inline-block">
+          <div class="imagen-boton-rectangular decksintetico"></div>
+          <div class="descripcion-link">{{ texts.358cb25b }}</div>
+        </a>
+        <div class="div-center-vertical">
+          <a href="{{ links.23 }}" class="link-block-tarjeta w-inline-block">
+            <h2 class="h2-small">{{ texts.-64ea79a9 }}</h2>
+          </a>
+          <a href="{{ links.55e45e1b }}" class="boton w-button">{{ texts.1b4c8cf8 }}</a>
+        </div>
+      </div>
     </div>
   </div>
   {%- include "partials/footer" -%}
