--- a/theme/decks.html
+++ b/theme/decks.html
@@ -134,24 +134,36 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <p class="paragraph dark medium center">{{ texts.-3675d188 }}</p>
       <div class="w-layout-grid grid-3-columnas">
         <div class="div-start-vertical">
-          <a href="{{ links.23 }}" class="lightbox-link-deck w-inline-block w-lightbox">{%- image images.-63ceb2dd.url, images.-63ceb2dd.alt, '[{"max":400,"size":"100vw"},{"max":10000,"size":"400px"}]', 'loading="lazy"' -%}
-            <script type="application/json" class="w-json">{"items":[{"_id":"example_img","origFileName":"deck-teka.jpg","fileName":"deck-teka.jpg","fileSize":208495,"height":960,"url":"/assets/images/deck-teka.jpg","width":1280,"type":"image"}],"group":""}</script>
+          <h4 class="center">{{ texts.59f589ea }}</h4>
+          <a href="{{ links.23 }}" class="lightbox-link-deck w-inline-block w-lightbox">{%- image images.-63ceb2dd.url, images.-63ceb2dd.alt, '[{"max":400,"size":"100vw"},{"max":10000,"size":"400px"}]', 'loading="lazy" class="full-image"' -%}
+            <div class="boton div-boton">
+              <div>{{ texts.665c3816 }}</div>
+            </div>
+            <script type="application/json" class="w-json">{"items":[{"_id":"example_img","origFileName":"deck-teka.jpg","fileName":"deck-teka.jpg","fileSize":208495,"height":960,"url":"/assets/images/deck-teka.jpg","width":1280,"type":"image"},{"_id":"example_img","origFileName":"deck-teka-04.jpg","fileName":"deck-teka-04.jpg","fileSize":151422,"height":1280,"url":"/assets/images/deck-teka-04.jpg","width":1180,"type":"image"},{"_id":"example_img","origFileName":"deck-teka-03.jpg","fileName":"deck-teka-03.jpg","fileSize":143174,"height":1280,"url":"/assets/images/deck-teka-03.jpg","width":1183,"type":"image"},{"_id":"example_img","origFileName":"deck-teka-02.jpg","fileName":"deck-teka-02.jpg","fileSize":165355,"height":1280,"url":"/assets/images/deck-teka-02.jpg","width":1175,"type":"image"},{"_id":"example_img","origFileName":"deck-teka-01.jpg","fileName":"deck-teka-01.jpg","fileSize":185815,"height":1280,"url":"/assets/images/deck-teka-01.jpg","width":1181,"type":"image"}],"group":""}</script>
           </a>
-          <h4 class="center">{{ texts.-5e2739cd }}</h4>
+          <h4 class="center">{{ texts.-2e315450 }}</h4>
           <p class="paragraph center">{{ texts.-21d501a }}</p>
         </div>
         <div class="div-start-vertical">
-          <a href="{{ links.23 }}" class="lightbox-link-deck w-inline-block w-lightbox">{%- image images.-5b3e035b.url, images.-5b3e035b.alt, '[{"max":400,"size":"100vw"},{"max":10000,"size":"400px"}]', 'loading="lazy"' -%}
-            <script type="application/json" class="w-json">{"items":[{"_id":"example_img","origFileName":"deck-cumaru.jpg","fileName":"deck-cumaru.jpg","fileSize":174070,"height":960,"url":"/assets/images/deck-cumaru.jpg","width":1280,"type":"image"}],"group":""}</script>
+          <h4 class="center">{{ texts.-69653b8f }}</h4>
+          <a href="{{ links.23 }}" class="lightbox-link-deck w-inline-block w-lightbox">{%- image images.-5b3e035b.url, images.-5b3e035b.alt, '[{"max":400,"size":"100vw"},{"max":10000,"size":"400px"}]', 'loading="lazy" class="full-image"' -%}
+            <div class="boton div-boton">
+              <div>{{ texts.665c3816 }}</div>
+            </div>
+            <script type="application/json" class="w-json">{"items":[{"_id":"example_img","origFileName":"deck-cumaru.jpg","fileName":"deck-cumaru.jpg","fileSize":174070,"height":960,"url":"/assets/images/deck-cumaru.jpg","width":1280,"type":"image"},{"_id":"example_img","origFileName":"deck-cumaru-06.jpg","fileName":"deck-cumaru-06.jpg","fileSize":176848,"height":1280,"url":"/assets/images/deck-cumaru-06.jpg","width":1179,"type":"image"},{"_id":"example_img","origFileName":"deck-cumaru-05.jpg","fileName":"deck-cumaru-05.jpg","fileSize":131209,"height":1280,"url":"/assets/images/deck-cumaru-05.jpg","width":1179,"type":"image"},{"_id":"example_img","origFileName":"deck-cumaru-04.jpg","fileName":"deck-cumaru-04.jpg","fileSize":158377,"height":1280,"url":"/assets/images/deck-cumaru-04.jpg","width":1181,"type":"image"},{"_id":"example_img","origFileName":"deck-cumaru-03.jpg","fileName":"deck-cumaru-03.jpg","fileSize":130852,"height":1280,"url":"/assets/images/deck-cumaru-03.jpg","width":1181,"type":"image"},{"_id":"example_img","origFileName":"deck-cumaru-02.jpg","fileName":"deck-cumaru-02.jpg","fileSize":211848,"height":1280,"url":"/assets/images/deck-cumaru-02.jpg","width":1177,"type":"image"},{"_id":"example_img","origFileName":"deck-cumaru-01.jpg","fileName":"deck-cumaru-01.jpg","fileSize":110560,"height":1280,"url":"/assets/images/deck-cumaru-01.jpg","width":1176,"type":"image"}],"group":""}</script>
           </a>
-          <h4 class="center">{{ texts.47eabb58 }}</h4>
+          <h4 class="center">{{ texts.-7fd87745 }}</h4>
           <p class="paragraph center">{{ texts.-324dea78 }}</p>
         </div>
         <div class="div-start-vertical">
-          <a href="{{ links.23 }}" class="lightbox-link-deck w-inline-block w-lightbox">{%- image images.-535eb38.url, images.-535eb38.alt, '[{"max":400,"size":"100vw"},{"max":10000,"size":"400px"}]', 'loading="lazy"' -%}
-            <script type="application/json" class="w-json">{"items":[{"_id":"example_img","origFileName":"deck-ipe.jpg","fileName":"deck-ipe.jpg","fileSize":186434,"height":960,"url":"/assets/images/deck-ipe.jpg","width":1280,"type":"image"}],"group":""}</script>
+          <h4 class="center">{{ texts.-1e218aa5 }}</h4>
+          <a href="{{ links.23 }}" class="lightbox-link-deck w-inline-block w-lightbox">{%- image images.-535eb38.url, images.-535eb38.alt, '[{"max":400,"size":"100vw"},{"max":10000,"size":"400px"}]', 'loading="lazy" class="full-image"' -%}
+            <div class="boton div-boton">
+              <div>{{ texts.665c3816 }}</div>
+            </div>
+            <script type="application/json" class="w-json">{"items":[{"_id":"example_img","origFileName":"deck-ipe-07.jpg","fileName":"deck-ipe-07.jpg","fileSize":139271,"height":1280,"url":"/assets/images/deck-ipe-07.jpg","width":1180,"type":"image"},{"_id":"example_img","origFileName":"deck-ipe-06.jpg","fileName":"deck-ipe-06.jpg","fileSize":168921,"height":1280,"url":"/assets/images/deck-ipe-06.jpg","width":1176,"type":"image"},{"_id":"example_img","origFileName":"deck-ipe-05.jpg","fileName":"deck-ipe-05.jpg","fileSize":189072,"height":1280,"url":"/assets/images/deck-ipe-05.jpg","width":1190,"type":"image"},{"_id":"example_img","origFileName":"deck-ipe-04.jpg","fileName":"deck-ipe-04.jpg","fileSize":186400,"height":1280,"url":"/assets/images/deck-ipe-04.jpg","width":1182,"type":"image"},{"_id":"example_img","origFileName":"deck-ipe-03.jpg","fileName":"deck-ipe-03.jpg","fileSize":210376,"height":1280,"url":"/assets/images/deck-ipe-03.jpg","width":1180,"type":"image"},{"_id":"example_img","origFileName":"deck-ipe-02.jpg","fileName":"deck-ipe-02.jpg","fileSize":206212,"height":1280,"url":"/assets/images/deck-ipe-02.jpg","width":1181,"type":"image"},{"_id":"example_img","origFileName":"deck-ipe-01.jpg","fileName":"deck-ipe-01.jpg","fileSize":238727,"height":1280,"url":"/assets/images/deck-ipe-01.jpg","width":1182,"type":"image"},{"_id":"example_img","origFileName":"deck-ipe.jpg","fileName":"deck-ipe.jpg","fileSize":186434,"height":960,"url":"/assets/images/deck-ipe.jpg","width":1280,"type":"image"}],"group":""}</script>
           </a>
-          <h4 class="center">{{ texts.10cad864 }}</h4>
+          <h4 class="center">{{ texts.-7a0c30b9 }}</h4>
           <p class="paragraph center">{{ texts.-1a318c42 }}<br>{{ texts.-61801162 }}</p>
         </div>
       </div>
